GNOME Bugzilla – Bug 703182
multipartmux does not push new segment after flushing seek
Last modified: 2013-07-09 07:17:21 UTC
Created attachment 247893 [details] [review] possible flag which resets the need_segment flag after flush_start Create a pipeline filesrc ! matroskademux ! multiqueue ! multipartmux ! fakesink Pause, wait for preroll, seek. It results in: gstreamer/gst/gstpad.c:3913:gst_pad_push_data:<multipartmux0:src> Got data flow before segment event
Review of attachment 247893 [details] [review]: ::: gst/multipart/multipartmux.c @@ +389,3 @@ + + switch (GST_EVENT_TYPE (event)) { + case GST_EVENT_FLUSH_START: This should be FLUSH_STOP instead. Otherwise there's a small race condition possible
Created attachment 248691 [details] [review] Updated to FLUSH_STOP
commit aa2d96c46bb4232eefe7ca57a07714639563e241 Author: Ognyan Tonchev <ognyan@axis.com> Date: Thu Jun 27 13:26:31 2013 +0200 multipartmux: Re-set need_segment flag after FLUSH_STOP https://bugzilla.gnome.org/show_bug.cgi?id=703182