multipartmux: Re-set need_segment flag after FLUSH_STOP

https://bugzilla.gnome.org/show_bug.cgi?id=703182